--- a/platformio.ini
+++ b/platformio.ini
@@ -34,7 +34,7 @@ build_flags =
     -D DISPLAY_HEIGHT=320
     -D TFT_WIDTH=DISPLAY_WIDTH
     -D TFT_HEIGHT=DISPLAY_HEIGHT
-    -D TFT_CS=15
+    -D TFT_CS=15ana
     -D TFT_MISO=12
     -D TFT_MOSI=13
     -D TFT_SCLK=14
