--- a/platformio.ini
+++ b/platformio.ini
@@ -10,55 +10,46 @@
 
 [platformio]
 
-
 [env:esp32-2432S028Rv2]
 platform = espressif32
 framework = arduino
 board = esp32-2432S028Rv2
-
 monitor_speed = 115200
+debug_tool = esp-prog
 monitor_rts = 0
 monitor_dtr = 0
 monitor_filters = esp32_exception_decoder
 board_build.partitions = custom_partition.csv
 board_build.filesystem = littlefs
-
-
-
-build_flags =
-    -Ofast
-    -Wall
-    '-D BOARD_NAME="${this.board}"'
-    '-D CORE_DEBUG_LEVEL=ARDUHAL_LOG_LEVEL_INFO'
-    -D DISPLAY_WIDTH=240
-    -D DISPLAY_HEIGHT=320
-    -D TFT_WIDTH=DISPLAY_WIDTH
-    -D TFT_HEIGHT=DISPLAY_HEIGHT
-    -D TFT_CS=15ana
-    -D TFT_MISO=12
-    -D TFT_MOSI=13
-    -D TFT_SCLK=14
-    -D TFT_DC=2
-    -D TFT_RST=-1
-      -D ENABLE_FAT12_SUPPORT=1
-      
-
-    #'-D CORE_DEBUG_LEVEL=ARDUHAL_LOG_LEVEL_DEBUG'
-    #'-D CORE_DEBUG_LEVEL=ARDUHAL_LOG_LEVEL_VERBOSE'
-    '-D LV_CONF_PATH=${platformio.include_dir}/lv_conf.h'
-    -I include 
-    
-lib_deps =
-    https://github.com/rzeldent/esp32-smartdisplay
-    https://github.com/LSatan/SmartRC-CC1101-Driver-Lib.git
-    https://github.com/Bodmer/TFT_eSPI.git#master
-    https://github.com/adafruit/Adafruit_SPIFlash.git#4.3.4
-    https://github.com/adafruit/SdFat.git#master
-    https://github.com/ddxfish/XPT2046_Bitbang_Arduino_Library
-	  https://github.com/wladimir-computin/espBitBanger
-    https://github.com/jgromes/RadioLib
-
-
-
-
-
+build_flags = 
+	
+	-Ofast
+	-Wall
+	'-D BOARD_NAME="${this.board}"'
+	'-D CORE_DEBUG_LEVEL=ARDUHAL_LOG_LEVEL_INFO'
+	-D DISPLAY_WIDTH=240
+	-D DISPLAY_HEIGHT=320
+	-D TFT_WIDTH=DISPLAY_WIDTH
+	-D TFT_HEIGHT=DISPLAY_HEIGHT
+	-D TFT_CS=15ana
+	-D TFT_MISO=12
+	-D TFT_MOSI=13
+	-D TFT_SCLK=14
+	-D TFT_DC=2
+	-D TFT_RST=-1
+	-D ENABLE_FAT12_SUPPORT=1
+	
+	
+	'-D LV_CONF_PATH=${platformio.include_dir}/lv_conf.h'
+	-I include
+	-D CORE_DEBUG_LEVEL=5
+lib_deps = 
+	https://github.com/rzeldent/esp32-smartdisplay
+	https://github.com/LSatan/SmartRC-CC1101-Driver-Lib.git
+	https://github.com/Bodmer/TFT_eSPI.git#master
+	https://github.com/adafruit/Adafruit_SPIFlash.git#4.3.4
+	https://github.com/adafruit/SdFat.git#master
+	https://github.com/ddxfish/XPT2046_Bitbang_Arduino_Library
+	https://github.com/wladimir-computin/espBitBanger
+	https://github.com/jgromes/RadioLib
+https://github.com/sui77/rc-switch
