--- a/platformio.ini
+++ b/platformio.ini
@@ -51,7 +51,4 @@ lib_deps =
 	https://github.com/adafruit/SdFat.git#master
 	https://github.com/ddxfish/XPT2046_Bitbang_Arduino_Library
 	https://github.com/wladimir-computin/espBitBanger
-	https://github.com/jgromes/RadioLib
-
-
-
+	h2zero/NimBLE-Arduino@^1.4.2
