most what was broken in cleaning fixed

--- a/platformio.ini
+++ b/platformio.ini
@@ -51,4 +51,4 @@ lib_deps =
 	https://github.com/adafruit/SdFat.git#master
 	https://github.com/ddxfish/XPT2046_Bitbang_Arduino_Library
 	https://github.com/wladimir-computin/espBitBanger
-
+	adafruit/SdFat - Adafruit Fork@^2.2.3
