--- a/platformio.ini
+++ b/platformio.ini
@@ -30,12 +30,14 @@ build_flags =
 	'-D XPT2046_MISO=39'
 	'-D XPT2046_CLK=25'
 	'-D XPT2046_CS=33'
+	-std=gnu++2a
 board_build.partitions = custom_partition.csv
 lib_deps = 
 	https://github.com/LSatan/SmartRC-CC1101-Driver-Lib.git
 	adafruit/SdFat - Adafruit Fork@^2.2.3
 	https://github.com/ddxfish/XPT2046_Bitbang_Arduino_Library
 	rzeldent/esp32_smartdisplay @ ^3.0.0
+	https://github.com/lvgl/lvgl
 
 
 [env:esp32-2432S028Rv2]
@@ -46,5 +48,7 @@ build_flags =
 	'-D BOARD_NAME="${this.board}"'
 	'-D CORE_DEBUG_LEVEL=ARDUHAL_LOG_LEVEL_INFO'
 	'-D LV_CONF_PATH=${platformio.include_dir}/lv_conf.h'
+	-std=gnu++2a
+	
 
 
