--- a/platformio.ini
+++ b/platformio.ini
@@ -37,7 +37,9 @@ lib_deps =
 	adafruit/SdFat - Adafruit Fork@^2.2.3
 	https://github.com/ddxfish/XPT2046_Bitbang_Arduino_Library
 	rzeldent/esp32_smartdisplay @ ^3.0.0
-	https://github.com/lvgl/lvgl
+	https://github.com/lvgl/lvgl 
+	puuu/ESPiLight
+
 
 
 [env:esp32-2432S028Rv2]
