--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -58,7 +58,8 @@
         "cinttypes": "cpp",
         "typeinfo": "cpp",
         "ui.h": "c",
-        "ui_helpers.h": "c"
+        "ui_helpers.h": "c",
+        "list.h": "c"
     },
     "idf.portWin": "COM5",
     "C_Cpp.errorSquiggles": "disabled"
