--- a/platformio.ini
+++ b/platformio.ini
@@ -1,3 +1,4 @@
+
 ; PlatformIO Project Configuration File
 ;
 ;   Build options: build flags, source filter
@@ -21,8 +22,6 @@ monitor_filters = esp32_exception_decoder
 build_flags = 
 	-Ofast
 	-Wall
-	'-D BOARD_NAME="${this.board}"'
-	'-D LV_CONF_PATH=${platformio.include_dir}/lv_conf.h'
 	'-D XPT2046_DONT_USE_SPI_BUS=1'
 	'-D HAS_TOUCH=1'
 	'-D XPT2046_IRQ=36'
@@ -30,6 +29,8 @@ build_flags =
 	'-D XPT2046_MISO=39'
 	'-D XPT2046_CLK=25'
 	'-D XPT2046_CS=33'
+	'-D LV_CONF_PATH=${platformio.include_dir}/lv_conf.h'
+	
 	-std=gnu++2a
 board_build.partitions = custom_partition.csv
 lib_deps = 
@@ -39,7 +40,11 @@ lib_deps =
 	rzeldent/esp32_smartdisplay @ ^3.0.0
 	https://github.com/lvgl/lvgl 
 	puuu/ESPiLight
-	https://github.com/m4ri01/rtl_433_ESP
+	https://github.com/jgromes/RadioLib
+	https://github.com/radiolib-org/RadioBoards
+	https://github.com/OSSLibraries/Arduino_MFRC522v2
+	crankyoldgit/IRremoteESP8266
+	nrf24/RF24
 
 
 
@@ -48,10 +53,19 @@ board = esp32-2432S028Rv2
 build_flags = 
 	-Ofast
 	-Wall
+
 	'-D BOARD_NAME="${this.board}"'
 	'-D CORE_DEBUG_LEVEL=ARDUHAL_LOG_LEVEL_INFO'
-	'-D LV_CONF_PATH=${platformio.include_dir}/lv_conf.h'
-	-std=gnu++2a
-	
+	'-D CYDV2'
 
+
+	
+[env:esp32-2432S028Rv3]
+board = esp32-2432S028Rv2
+build_flags = 
+	-Ofast
+	-Wall
+	'-D BOARD_NAME="${this.board}"'
+	'-D CORE_DEBUG_LEVEL=ARDUHAL_LOG_LEVEL_INFO'
+	'-D CYDV3'
 
