--- a/platformio.ini
+++ b/platformio.ini
@@ -30,21 +30,22 @@ build_flags =
 	'-D XPT2046_CLK=25'
 	'-D XPT2046_CS=33'
 	'-D LV_CONF_PATH=${platformio.include_dir}/lv_conf.h'
+	'-D RF24_SPI_SPEED=4000000'
+	'-D ESP32=1'
+
 	
 	-std=gnu++2a
 board_build.partitions = custom_partition.csv
 lib_deps = 
-	https://github.com/LSatan/SmartRC-CC1101-Driver-Lib.git
 	adafruit/SdFat - Adafruit Fork@^2.2.3
 	https://github.com/ddxfish/XPT2046_Bitbang_Arduino_Library
-	rzeldent/esp32_smartdisplay @ ^3.0.0
 	https://github.com/lvgl/lvgl 
 	puuu/ESPiLight
-	https://github.com/jgromes/RadioLib
-	https://github.com/radiolib-org/RadioBoards
-	https://github.com/OSSLibraries/Arduino_MFRC522v2
 	crankyoldgit/IRremoteESP8266
 	nrf24/RF24
+
+
+
 
 
 
@@ -55,17 +56,17 @@ build_flags =
 	-Wall
 
 	'-D BOARD_NAME="${this.board}"'
-	'-D CORE_DEBUG_LEVEL=ARDUHAL_LOG_LEVEL_INFO'
+	'-DCORE_DEBUG_LEVEL=5'
 	'-D CYDV2'
 
 
 	
 [env:esp32-2432S028Rv3]
-board = esp32-2432S028Rv2
+board = esp32-2432S028Rv3
 build_flags = 
 	-Ofast
 	-Wall
 	'-D BOARD_NAME="${this.board}"'
-	'-D CORE_DEBUG_LEVEL=ARDUHAL_LOG_LEVEL_INFO'
+	'-D CORE_DEBUG_LEVEL=5'
 	'-D CYDV3'
 
