--- a/platformio.ini
+++ b/platformio.ini
@@ -1,4 +1,3 @@
-
 ; PlatformIO Project Configuration File
 ;
 ;   Build options: build flags, source filter
@@ -10,7 +9,7 @@
 ; https://docs.platformio.org/page/projectconf.html
 
 [platformio]
-default_envs = esp32-2432S028Rv2
+default_envs = esp32-2432S028Rv3
 
 [env]
 platform = espressif32
@@ -30,42 +29,41 @@ build_flags =
 	'-D XPT2046_CLK=25'
 	'-D XPT2046_CS=33'
 	'-D LV_CONF_PATH=${platformio.include_dir}/lv_conf.h'
-	'-D RF24_SPI_SPEED=4000000'
 	'-D ESP32=1'
-
+	
 	
 	-std=gnu++2a
 board_build.partitions = custom_partition.csv
 lib_deps = 
 	adafruit/SdFat - Adafruit Fork@^2.2.3
 	https://github.com/ddxfish/XPT2046_Bitbang_Arduino_Library
-	https://github.com/lvgl/lvgl 
+	https://github.com/lvgl/lvgl
 	puuu/ESPiLight
 	crankyoldgit/IRremoteESP8266
 	nrf24/RF24
-
-
-
-
+	; shchuko/rtl_433_ESP @ ^0.3.2
+	; jgromes/RadioLib
+	; bblanchon/ArduinoJson@^5.3.0
+	; thijse/ArduinoLog
 
 [env:esp32-2432S028Rv2]
 board = esp32-2432S028Rv2
 build_flags = 
 	-Ofast
 	-Wall
-
+	
 	'-D BOARD_NAME="${this.board}"'
 	'-DCORE_DEBUG_LEVEL=5'
 	'-D CYDV2'
+	;'-D RF_CC1101'
 
 
-	
 [env:esp32-2432S028Rv3]
 board = esp32-2432S028Rv3
 build_flags = 
 	-Ofast
 	-Wall
 	'-D BOARD_NAME="${this.board}"'
-	'-D CORE_DEBUG_LEVEL=5'
+	;'-D CORE_DEBUG_LEVEL=5'
 	'-D CYDV3'
 
