--- a/src/esp32_smartdisplay/platformio.ini
+++ b/src/esp32_smartdisplay/platformio.ini
@@ -20,7 +20,7 @@
 #default_envs = esp32-2432S024R
 #default_envs = esp32-2432S028R
 #default_envs = esp32-2432S028Rv2
-#default_envs = esp32-2432S028Rv3
+default_envs = esp32-2432S028Rv3
 #default_envs = esp32-2432S032C
 #default_envs = esp32-2432S032N
 #default_envs = esp32-2432S032R
@@ -51,7 +51,7 @@ framework = arduino
 build_flags =
     -Ofast
     -Wall
-    '-D CORE_DEBUG_LEVEL=ARDUHAL_LOG_LEVEL_VERBOSE'
+   #  '-D CORE_DEBUG_LEVEL=ARDUHAL_LOG_LEVEL_VERBOSE'
     # LVGL settings
     '-D LV_CONF_PATH=${platformio.test_dir}/lv_conf.h'
     '-D ESP_LCD_PANEL_IO_ADDITIONS_VER_MAJOR=1'
