--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -65,7 +65,8 @@
         "esp_panel_ili9341.h": "c",
         "spi_master.h": "c",
         "esp32_smartdisplay.h": "c",
-        "rtl_433_devices.h": "c"
+        "rtl_433_devices.h": "c",
+        "logo.h": "c"
     },
     "idf.portWin": "COM5",
     "C_Cpp.errorSquiggles": "disabled"
