did lot of changes in SubGhz, now, im able to replay car keyfobs, but need to restart after few codes

--- a/platformio.ini
+++ b/platformio.ini
@@ -29,7 +29,14 @@ build_flags =
 	'-D XPT2046_CLK=25'
 	'-D XPT2046_CS=33'
 	'-D LV_CONF_PATH=${platformio.include_dir}/lv_conf.h'
-	'-D ESP32=1'
+	'-D ESP32'
+	'-DRF_CC1101'
+	'-DRF_MODULE_SCK=22'
+	'-DRF_MODULE_MISO=35'
+	'-DRF_MODULE_MOSI=21'
+	'-DRF_MODULE_CS=27'
+
+
 	
 	
 	-std=gnu++2a
@@ -39,11 +46,11 @@ lib_deps =
 	https://github.com/ddxfish/XPT2046_Bitbang_Arduino_Library
 	https://github.com/lvgl/lvgl
 	puuu/ESPiLight
-	crankyoldgit/IRremoteESP8266
-	; shchuko/rtl_433_ESP @ ^0.3.2
+
+	 shchuko/rtl_433_ESP
 	; jgromes/RadioLib
-	; bblanchon/ArduinoJson@^5.3.0
-	; thijse/ArduinoLog
+	 bblanchon/ArduinoJson@^5.3.0
+	 thijse/ArduinoLog
 
 [env:esp32-2432S028Rv2]
 board = esp32-2432S028Rv2
