--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -67,7 +67,13 @@
         "esp32_smartdisplay.h": "c",
         "rtl_433_devices.h": "c",
         "logo.h": "c",
-        "set": "cpp"
+        "set": "cpp",
+        "bit": "cpp",
+        "compare": "cpp",
+        "concepts": "cpp",
+        "numbers": "cpp",
+        "semaphore": "cpp",
+        "stop_token": "cpp"
     },
     "idf.portWin": "COM33",
     "C_Cpp.errorSquiggles": "disabled"
