not ideal, but custim subghz works

--- a/lib/RC-switch_mod/platformio.ini
+++ b/lib/RC-switch_mod/platformio.ini
@@ -24,7 +24,7 @@ src_dir = examples/ReceiveDemo_Advanced
 ;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;
 
 ;default_envs = sonoff-basic-rfr3
-;default_envs = esp32dev-rf
+default_envs = esp32dev-rf
 ;default_envs = nodemcuv2-rf
 ;default_envs = rf-wifi-gateway
 ;default_envs = uno-rf
