--- a/platformio.ini
+++ b/platformio.ini
@@ -45,7 +45,7 @@ lib_deps =
 	adafruit/SdFat - Adafruit Fork@^2.2.3
 	https://github.com/ddxfish/XPT2046_Bitbang_Arduino_Library
 	https://github.com/lvgl/lvgl
-	puuu/ESPiLight
+	  puuu/ESPiLight @ ^0.17.0
 
 	 shchuko/rtl_433_ESP
 	; jgromes/RadioLib
