--- a/platformio.ini
+++ b/platformio.ini
@@ -29,7 +29,7 @@ build_flags =
 	'-D XPT2046_CLK=25'
 	'-D XPT2046_CS=33'
 	'-D LV_CONF_PATH=${platformio.include_dir}/lv_conf.h'
-	'-D ESP32'
+;	'-D ESP32'
 	'-DRF_CC1101'
 	'-DRF_MODULE_SCK=22'
 	'-DRF_MODULE_MISO=35'
@@ -39,7 +39,7 @@ build_flags =
 
 	
 	
-	-std=gnu++2a
+	;-std=gnu++2a
 board_build.partitions = custom_partition.csv
 lib_deps = 
 	adafruit/SdFat - Adafruit Fork@^2.2.3
@@ -50,6 +50,7 @@ lib_deps =
 	; jgromes/RadioLib
 	bblanchon/ArduinoJson@^5.3.0
 	thijse/ArduinoLog
+	https://github.com/IRMP-org/IRMP
 
 [env:esp32-2432S028Rv2]
 board = esp32-2432S028Rv2
@@ -57,7 +58,7 @@ build_flags =
 	-Ofast
 	-Wall
 	
-	'-D BOARD_NAME="${this.board}"'
+	;z`'-D BOARD_NAME="${this.board}"'
 	'-DCORE_DEBUG_LEVEL=5'
 	'-D CYDV2'
 	;'-D RF_CC1101'
@@ -68,7 +69,7 @@ board = esp32-2432S028Rv3
 build_flags = 
 	-Ofast
 	-Wall
-	'-D BOARD_NAME="${this.board}"'
+	;'-D BOARD_NAME="${this.board}"'
 	;'-D CORE_DEBUG_LEVEL=5'
 	'-D CYDV3'
 
