--- a/platformio.ini
+++ b/platformio.ini
@@ -71,7 +71,7 @@ board = esp32-2432S028Rv3
 build_flags = 
 	-Ofast
 	-Wall
-	;'-D BOARD_NAME="${this.board}"'
+	'-D BOARD_NAME="${this.board}"'
 	;'-D CORE_DEBUG_LEVEL=5'
 	'-D CYDV3'
 
