--- a/platformio.ini
+++ b/platformio.ini
@@ -50,7 +50,8 @@ lib_deps =
 	bblanchon/ArduinoJson@^5.3.0
 	thijse/ArduinoLog
   https://github.com/tonhuisman/IRremoteESP8266/archive/feature/C++20-compatibility.zip
-
+	adafruit/Adafruit PN532 @ ^1.3.4
+	https://github.com/adafruit/Adafruit_BusIO
 
 [env:esp32-2432S028Rv2]
 board = esp32-2432S028Rv2
