smooth scroling in file explorer, fixed replay

--- a/platformio.ini
+++ b/platformio.ini
@@ -35,6 +35,9 @@ build_flags =
 	'-DRF_MODULE_MISO=35'
 	'-DRF_MODULE_MOSI=21'
 	'-DRF_MODULE_CS=27'
+	-DMBEDTLS_DES3_C
+	-DMBEDTLS_DES3
+	-include limits.h
 
 
 	;build_type = debug
@@ -45,8 +48,7 @@ lib_deps =
 	  adafruit/SdFat - Adafruit Fork @ ^2.2.3
 	https://github.com/ddxfish/XPT2046_Bitbang_Arduino_Library
 	https://github.com/lvgl/lvgl
-
-
+	    AES @ 1.0.0
 	bblanchon/ArduinoJson@^5.3.0
 	thijse/ArduinoLog
   https://github.com/tonhuisman/IRremoteESP8266/archive/feature/C++20-compatibility.zip
