--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -73,10 +73,11 @@
         "concepts": "cpp",
         "numbers": "cpp",
         "semaphore": "cpp",
-        "stop_token": "cpp"
+        "stop_token": "cpp",
+        "kia.h": "c"
     },
     "idf.portWin": "COM33",
     "C_Cpp.errorSquiggles": "disabled",
     "idf.pythonInstallPath": "/usr/bin/python3",
-    "idf.port": "/dev/ttyUSB1"
+    "idf.port": "/dev/ttyUSB0"
 }
